Fix screen flicker on first load

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
   background: url("img/workout_room.png") no-repeat center center fixed;
   background-size: cover;
   transition: background 0.5s;
+  visibility: hidden;
 }
 
 hr {
